--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test/**/*.test.js --timeout=2000"
+    "test": "mocha ./test/**/*.test.js --timeout=2000 --reporter mochawesome"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "dependencies": {
     "chai": "^6.2.0",
     "mocha": "^11.7.2",
+    "mochawesome": "^7.1.4",
     "supertest": "^7.1.4",
     "test": "^3.3.0"
   }
